--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__info/header__info.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__add-button/profile__add-button.css);
@@ -52,3 +54,20 @@
 
 @import url(./blocks/popup/__reset/popup__reset.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__submit/form__submit.css);
+@import url(./blocks/form/__submit/_disabled/form__submit_disabled.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__input-error/form__input-error.css);
+@import url(./blocks/form/__input-error/_active/form__input-error_active.css);
+@import url(./blocks/form/__header/form__header.css);
+@import url(./blocks/form/__field/form__field.css);
+@import url(./blocks/form/__container/form__container.css);
+@import url(./blocks/form/__text/form__text.css);
+@import url(./blocks/form/__link/form__link.css);
+
+@import url(./blocks/tooltip/__text/tooltip__text.css);
+@import url(./blocks/tooltip/__reset/tooltip__reset.css);
+@import url(./blocks/tooltip/__container/tooltip__container.css);
+@import url(./blocks/tooltip/__img/tooltip__img.css);
